# spacenav-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
libspnav/: Cargo.toml  build.rs
libspnav/src/: close.rs  device.rs  event.rs  lib.rs  open.rs
spacenav/: Cargo.toml
spacenav/spacenav-settings/: Cargo.toml
spacenav/spacenav-settings/src/: lib.rs  profiles.rs  settings.rs  toml.rs
spacenav/src/: assets.rs  main.rs
spacenav/src/app/: app.rs  mod.rs
spacenav/src/app/profiles/: mod.rs
spacenav/src/app/views/: configuration_view.rs  footer_view.rs  header_view.rs  mod.rs
spacenav/src/app/widgets/: axis_bar.rs  mod.rs
spacenav/src/spnav/: client.rs
spacenav/src/util/: mod.rs
