[workspace.package]
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
repository = "https://github.com/kKdH/spacenav-rs"
keywords = []
categories = []
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"

[workspace]
resolver = "3"
members = [
    "libspnav",
    "spacenav"
]

[workspace.dependencies]
libspnav = { path = "libspnav" }

futures = { version = "0.3.*" }
googletest = { version = "0.14.*" }
iced = { version = "0.14.*", features = ["debug"] }
iced_aw = { version = "0.13.*" }
tokio = { version = "*" }

[profile.release]
lto = "fat"
