[workspace.package]
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
repository = "https://github.com/kKdH/spacenav-rs"
keywords = []
categories = []
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"

[workspace]
resolver = "3"
members = [
    "libspnav",
    "spacenav",
    "spacenav/spacenav-settings",
]

[workspace.dependencies]
libspnav = { path = "libspnav" }
spacenav = { path = "spacenav" }
spacenav-settings = { path = "spacenav/spacenav-settings" }

directories = { version = "6.0.*"}
futures = { version = "0.3.*" }
googletest = { version = "0.14.*" }
iced = { version = "0.14.*", features = ["debug"] }
iced_aw = { version = "0.13.*" }
image = { version = "0.25.*" }
serde = { version = "1.*" }
tokio = { version = "*" }
toml = { version = "1.0.4+spec-1.1.0" }
indoc = { version = "2.0.*" }

[profile.release]
lto = "fat"
