[package]
name = "spacenav"
readme = "../README.md"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

include = [
    "**/*.rs",
    "Cargo.toml",
    "../README.md",
    "../CHANGELOG.md",
    "../LICENSE",
    "../rust-toolchain.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
libspnav = { workspace = true }

futures = { workspace = true }
iced = { workspace = true, features = ["sipper"] }
iced_aw = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
