[package]
name = "spacenav-settings"
readme = "../../README.md"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

include = [
    "**/*.rs",
    "Cargo.toml",
    "../../README.md",
    "../../CHANGELOG.md",
    "../../LICENSE",
    "../../rust-toolchain.toml",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
toml = { workspace = true, optional = true }

[dev-dependencies]
indoc = { workspace = true }
googletest = { workspace = true }
